# apertium-srd-ita

./: .gitattributes  AUTHORS  Makefile.am  README  TODO  act_trad_ita_srd.txt  apertium-srd-ita.ita-srd.lrx  apertium-srd-ita.ita-srd.metalrx  apertium-srd-ita.ita-srd.t1x  apertium-srd-ita.ita-srd.t2x  apertium-srd-ita.srd-ita.dix  apertium-srd-ita.srd-ita.lrx  apertium-srd-ita.srd-ita.metalrx  apertium-srd-ita.srd-ita.t1x  apertium-srd-ita.srd-ita.t2x  bauladu.csv  carregar_lexic_srd_ita.pl  configure.ac  cumpare meu istimadu  evaluation.gsoc17  f_bi.dix.txt  f_srd.dix.txt  kyuss170401.ita.fin.txt  kyuss17401.ita.ini.txt  kyuss17401.srd.txt  modes.xml  nova_trad_ita_srd.txt  partidu.comunista.rev.srd.txt  partito.comunista.ita.txt  partito.comunista.srd.txt  retrad_ita_srd.sh
dev/: glossariu.ita-srd.nospaces.txt  glossariu.ita-srd.spaces.txt
evaluacion/: corriere160505.srd.txt  corriere160629.srd.txt  limbasnatziones1305.ita.ini.txt  limbasnatziones1305.txt  limbasnatziones1380.ita.txt  limbasnatziones1380.rev.ita.txt  limbasnatziones1380.txt
t/: config.sh.in
test/: ita-srd-biltrans-expected.txt  ita-srd-disam-expected.txt  ita-srd-generator-expected.txt  ita-srd-input.txt  ita-srd-interchunk-expected.txt  ita-srd-lex-expected.txt  ita-srd-morph-expected.txt  ita-srd-pending-biltrans-expected.txt  ita-srd-pending-chunker-expected.txt  ita-srd-pending-disam-expected.txt  ita-srd-pending-generator-expected.txt  ita-srd-pending-input.txt  ita-srd-pending-interchunk-expected.txt  ita-srd-pending-lex-expected.txt  ita-srd-pending-morph-expected.txt  ita-srd-pending-postchunk-expected.txt  ita-srd-pending-postgen-expected.txt  ita-srd-pending-postgen-gold.txt  ita-srd-pending-pretransfer-expected.txt  ita-srd-pending-tagger-expected.txt  ita-srd-postchunk-expected.txt  ita-srd-postgen-expected.txt  ita-srd-postgen-gold.txt  ita-srd-pretransfer-expected.txt  ita-srd-regression-biltrans-expected.txt  ita-srd-regression-chunker-expected.txt  ita-srd-regression-disam-expected.txt  ita-srd-regression-generator-expected.txt  ita-srd-regression-input.txt  ita-srd-regression-interchunk-expected.txt  ita-srd-regression-lex-expected.txt  ita-srd-regression-morph-expected.txt  ita-srd-regression-postchunk-expected.txt  ita-srd-regression-postgen-expected.txt  ita-srd-regression-postgen-gold.txt  ita-srd-regression-pretransfer-expected.txt  ita-srd-regression-tagger-expected.txt  srd-ita-biltrans-expected.txt  srd-ita-disam-expected.txt  (+23 more)
texts/: cuento.2.srd.txt  (+7 more)
(+4 files in other folders)
